# openeuler-witty-ub

./: .clang-format  .gitignore  CMakeLists.txt  README.md
License/: Project License
data/: failure-mode.json  failure_mode.json
data/skill/ub-callstack-aggregation/: SKILL.md
data/skill/ub-callstack-aggregation/scripts/: aggregate_callstack.py
data/skill/ub-callstack-analysis/: SKILL.md
data/skill/ub-keyfunc-analysis/: SKILL.md
docs/: concurrent-write-solution.md  quick-start.md  witty-ub数据采集工具指导.md
hack/: releasenode.sh  releasenote.sh
src/: CMakeLists.txt  ubse_main.cpp  witty_ub_log_main.cpp  witty_ub_topo_main.cpp
src/framework/: CMakeLists.txt
src/framework/com/: CMakeLists.txt
src/framework/com/common/: rack_com_context.h  rack_com_result.h
src/framework/com/http/: rack_http_client.cpp  rack_http_client.h  rack_http_client_handler.h  rack_http_module.cpp  rack_http_module.h  rack_http_server.cpp  rack_http_server.h  rack_http_server_handler.cpp  rack_http_server_handler.h  rack_http_types.h
src/framework/context/: CMakeLists.txt  ubse_context.cpp  ubse_context.h
src/framework/database/: CMakeLists.txt  database.cpp  database.h  database_module.cpp  database_module.h
src/framework/json-io/: CMakeLists.txt  wiity_json.h  witty_json.h  witty_json_module.cpp  witty_json_module.h
src/include/: CMakeLists.txt  failure_def.cpp  failure_def.h  logger.h  node_data_def.cpp  node_data_def.h  rack_error.h  rack_module.h  urma_data_def.h  utils.cpp  utils.h
src/log/: CMakeLists.txt  log_callstack_collector.cpp  log_callstack_collector.h  log_collector.cpp  log_collector.h  log_failure_collector.cpp  log_failure_collector.h  log_graph.cpp  log_graph.h  log_local_collector_module.cpp  log_local_collector_module.h  log_parser.cpp  log_parser.h  log_reader.cpp  log_reader.h  log_template.cpp  log_template.h
src/plugins/: CMakeLists.txt
src/plugins/lcne/: CMakeLists.txt  lcne_common.cpp  lcne_common.h  lcne_data_handler.cpp  lcne_data_handler.h  lcne_error.h  lcne_module.cpp  lcne_module.h  lcne_node_collector.cpp  lcne_node_collector.h  lcne_topology.cpp  lcne_topology.h
src/plugins/obmm/: CMakeLists.txt  obmm_mem_collector.cpp  obmm_mem_collector.h  obmm_module.cpp  obmm_module.h
src/plugins/urma/: CMakeLists.txt  urma_error.h  urma_module.cpp  urma_module.h  urma_topology.cpp  urma_topology.h
src/topology/: CMakeLists.txt  mem_collector.cpp  mem_collector.h  mem_global_collector_module.cpp  mem_global_collector_module.h  mem_local_collector_module.cpp  mem_local_collector_module.h  node_collector.cpp  node_collector.h  node_colletor.cpp  node_local_collector_module.cpp  node_local_collector_module.h
